kubernetes/manifests/etcd-cluster.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-headless
  labels:
    app: etcd
spec:
  ports:
  - port: 2380
    name: peer
  clusterIP: None
  selector:
    app: etcd
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-client
  labels:
    app: etcd
spec:
  ports:
  - port: 2379
    name: client
  selector:
    app: etcd
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: etcd
  labels:
    app: etcd
spec:
  serviceName: etcd-headless
  replicas: 3
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
      - name: etcd
        image: 097102939699.dkr.ecr.ap-northeast-1.amazonaws.com/etcd:latest
        ports:
        - containerPort: 2379
          name: client
        - containerPort: 2380
          name: peer
        volumeMounts:
        - name: etcd-data
          mountPath: /var/run/etcd
      volumes:
      - name: etcd-data
        emptyDir: {}
